@@ -9,8 +9,8 @@ import de.digidrivelog.mappers.UserMapper;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.http.HttpStatus;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.web.server.ResponseStatusException;
 
 @Service
@@ -20,7 +20,7 @@ public class UserService {
     private final UserRepository userRepository;
     
     public List<UserDto> getAllUsers() {
-        return userRepository.findAll().stream().map(UserMapper::toDto).collect(Collectors.toList());
+        return userRepository.findAll().stream().map(UserMapper::toDto).toList();
     }
 
     public UserDto createUser(CreateUserRequest request) {
@@ -52,7 +52,11 @@ public class UserService {
         if (!userRepository.existsById(userId)) {
             throw new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found");
         }
-        userRepository.deleteById(userId);
+        try {
+            userRepository.deleteById(userId);
+        } catch (DataIntegrityViolationException e) {
+            throw new ResponseStatusException(HttpStatus.CONFLICT, "User cannot be deleted because related cars, drives or costs exist");
+        }
     }
 
     
